--- a/nascent_rna_methods.bib
+++ b/nascent_rna_methods.bib
@@ -8,3 +8,14 @@
   year={2018},
   publisher={Oxford University Press}
 }
+
+@article{guertin2010chromatin,
+  title={Chromatin landscape dictates HSF binding to target DNA elements},
+  author={Guertin, Michael J and Lis, John T},
+  journal={PLoS genetics},
+  volume={6},
+  number={9},
+  pages={e1001114},
+  year={2010},
+  publisher={Public Library of Science San Francisco, USA}
+}
