--- a/nascent_rna_methods.bib
+++ b/nascent_rna_methods.bib
@@ -30,3 +30,14 @@
   year={2010},
   publisher={Oxford University Press}
 }
+
+@article{langmead2012fast,
+  title={Fast gapped-read alignment with Bowtie 2},
+  author={Langmead, Ben and Salzberg, Steven L},
+  journal={Nature methods},
+  volume={9},
+  number={4},
+  pages={357--359},
+  year={2012},
+  publisher={Nature Publishing Group}
+}
