--- a/nascent_rna_methods.bib
+++ b/nascent_rna_methods.bib
@@ -1,3 +1,14 @@
+@article{blumberg2021characterizing,
+  title={Characterizing RNA stability genome-wide through combined analysis of PRO-seq and RNA-seq data},
+  author={Blumberg, Amit and Zhao, Yixin and Huang, Yi-Fei and Dukler, Noah and Rice, Edward J and Chivu, Alexandra G and Krumholz, Katie and Danko, Charles G and Siepel, Adam},
+  journal={BMC biology},
+  volume={19},
+  number={1},
+  pages={1--17},
+  year={2021},
+  publisher={BioMed Central}
+}
+
 @article{martins2018universal,
   title={Universal correction of enzymatic sequence bias reveals molecular signatures of protein/DNA interactions},
   author={Martins, Andr{\'e} L and Walavalkar, Ninad M and Anderson, Warren D and Zang, Chongzhi and Guertin, Michael J},
