--- a/nascent_rna_methods.bib
+++ b/nascent_rna_methods.bib
@@ -52,3 +52,14 @@
   year={2012},
   publisher={Nature Publishing Group}
 }
+
+@article{kwak2013precise,
+  title={Precise maps of RNA polymerase reveal how promoters direct initiation and pausing},
+  author={Kwak, Hojoong and Fuda, Nicholas J and Core, Leighton J and Lis, John T},
+  journal={Science},
+  volume={339},
+  number={6122},
+  pages={950--953},
+  year={2013},
+  publisher={American Association for the Advancement of Science}
+}
