--- a/nascent_rna_methods.bib
+++ b/nascent_rna_methods.bib
@@ -63,3 +63,25 @@
   year={2013},
   publisher={American Association for the Advancement of Science}
 }
+
+@article{wang2019identification,
+  title={Identification of regulatory elements from nascent transcription using dREG},
+  author={Wang, Zhong and Chu, Tinyi and Choate, Lauren A and Danko, Charles G},
+  journal={Genome research},
+  volume={29},
+  number={2},
+  pages={293--303},
+  year={2019},
+  publisher={Cold Spring Harbor Lab}
+}
+
+@article{scruggs2015bidirectional,
+  title={Bidirectional transcription arises from two distinct hubs of transcription factor binding and active chromatin},
+  author={Scruggs, Benjamin S and Gilchrist, Daniel A and Nechaev, Sergei and Muse, Ginger W and Burkholder, Adam and Fargo, David C and Adelman, Karen},
+  journal={Molecular cell},
+  volume={58},
+  number={6},
+  pages={1101--1112},
+  year={2015},
+  publisher={Elsevier}
+}
