--- a/nascent_rna_methods.bib
+++ b/nascent_rna_methods.bib
@@ -1,3 +1,14 @@
+@article{sathyan2019improved,
+  title={An improved auxin-inducible degron system preserves native protein levels and enables rapid and specific protein depletion},
+  author={Sathyan, Kizhakke Mattada and McKenna, Brian D and Anderson, Warren D and Duarte, Fabiana M and Core, Leighton and Guertin, Michael J},
+  journal={Genes \& development},
+  volume={33},
+  number={19-20},
+  pages={1441--1455},
+  year={2019},
+  publisher={Cold Spring Harbor Lab}
+}
+
 @article{blumberg2021characterizing,
   title={Characterizing RNA stability genome-wide through combined analysis of PRO-seq and RNA-seq data},
   author={Blumberg, Amit and Zhao, Yixin and Huang, Yi-Fei and Dukler, Noah and Rice, Edward J and Chivu, Alexandra G and Krumholz, Katie and Danko, Charles G and Siepel, Adam},
