--- a/nascent_rna_methods.bib
+++ b/nascent_rna_methods.bib
@@ -1,3 +1,25 @@
+@article{danko2013signaling,
+  title={Signaling pathways differentially affect RNA polymerase II initiation, pausing, and elongation rate in cells},
+  author={Danko, Charles G and Hah, Nasun and Luo, Xin and Martins, Andr{\'e} L and Core, Leighton and Lis, John T and Siepel, Adam and Kraus, W Lee},
+  journal={Molecular cell},
+  volume={50},
+  number={2},
+  pages={212--222},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{hah2011rapid,
+  title={A rapid, extensive, and transient transcriptional response to estrogen signaling in breast cancer cells},
+  author={Hah, Nasun and Danko, Charles G and Core, Leighton and Waterfall, Joshua J and Siepel, Adam and Lis, John T and Kraus, W Lee},
+  journal={Cell},
+  volume={145},
+  number={4},
+  pages={622--634},
+  year={2011},
+  publisher={Elsevier}
+}
+
 @article{sathyan2019improved,
   title={An improved auxin-inducible degron system preserves native protein levels and enables rapid and specific protein depletion},
   author={Sathyan, Kizhakke Mattada and McKenna, Brian D and Anderson, Warren D and Duarte, Fabiana M and Core, Leighton and Guertin, Michael J},
