--- a/nascent_rna_methods.bib
+++ b/nascent_rna_methods.bib
@@ -1,3 +1,56 @@
+@article{smith2021peppro,
+  title={PEPPRO: quality control and processing of nascent RNA profiling data},
+  author={Smith, Jason P and Dutta, Arun B and Sathyan, Kizhakke Mattada and Guertin, Michael J and Sheffield, Nathan C},
+  journal={Genome Biology},
+  volume={22},
+  number={1},
+  pages={1--17},
+  year={2021},
+  publisher={BioMed Central}
+}
+
+@article{mayer2015native,
+  title={Native elongating transcript sequencing reveals human transcriptional activity at nucleotide resolution},
+  author={Mayer, Andreas and Di Iulio, Julia and Maleri, Seth and Eser, Umut and Vierstra, Jeff and Reynolds, Alex and Sandstrom, Richard and Stamatoyannopoulos, John A and Churchman, L Stirling},
+  journal={Cell},
+  volume={161},
+  number={3},
+  pages={541--554},
+  year={2015},
+  publisher={Elsevier}
+}
+@article{muhar2018slam,
+  title={SLAM-seq defines direct gene-regulatory functions of the BRD4-MYC axis},
+  author={Muhar, Matthias and Ebert, Anja and Neumann, Tobias and Umkehrer, Christian and Jude, Julian and Wieshofer, Corinna and Rescheneder, Philipp and Lipp, Jesse J and Herzog, Veronika A and Reichholf, Brian and others},
+  journal={Science},
+  volume={360},
+  number={6390},
+  pages={800--805},
+  year={2018},
+  publisher={American Association for the Advancement of Science}
+}
+@article{churchman2011nascent,
+  title={Nascent transcript sequencing visualizes transcription at nucleotide resolution},
+  author={Churchman, L Stirling and Weissman, Jonathan S},
+  journal={Nature},
+  volume={469},
+  number={7330},
+  pages={368--373},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
+
+@article{schwalb2016tt,
+  title={TT-seq maps the human transient transcriptome},
+  author={Schwalb, Bj{\"o}rn and Michel, Margaux and Zacher, Benedikt and Fr{\"u}hauf, Katja and Demel, Carina and Tresch, Achim and Gagneur, Julien and Cramer, Patrick},
+  journal={Science},
+  volume={352},
+  number={6290},
+  pages={1225--1228},
+  year={2016},
+  publisher={American Association for the Advancement of Science}
+}
+
 @article{danko2013signaling,
   title={Signaling pathways differentially affect RNA polymerase II initiation, pausing, and elongation rate in cells},
   author={Danko, Charles G and Hah, Nasun and Luo, Xin and Martins, Andr{\'e} L and Core, Leighton and Lis, John T and Siepel, Adam and Kraus, W Lee},
