--- a/nascent_rna_methods.bib
+++ b/nascent_rna_methods.bib
@@ -1,3 +1,86 @@
+@article{love2014moderated,
+  title={Moderated estimation of fold change and dispersion for RNA-seq data with DESeq2},
+  author={Love, Michael I and Huber, Wolfgang and Anders, Simon},
+  journal={Genome biology},
+  volume={15},
+  number={12},
+  pages={1--21},
+  year={2014},
+  publisher={BioMed Central}
+}
+
+@book{sarkar2008lattice,
+  title={Lattice: multivariate data visualization with R},
+  author={Sarkar, Deepayan},
+  year={2008},
+  publisher={Springer Science \& Business Media}
+}
+@misc{martins2018fqdedup,
+  title={fqdedup: Remove PCR duplicates from FASTQ files},
+  author={Martins, Andr{\'e} L and Guertin, Michael J},
+  year={2018},
+  publisher={Github}
+}
+
+@misc{li2013seqtk,
+  title={Seqtk: a fast and lightweight tool for processing FASTA or FASTQ sequences},
+  author={Li, Heng and others},
+  year={2013},
+  publisher={Github}
+}
+
+@article{martins2018universal,
+  title={Universal correction of enzymatic sequence bias reveals molecular signatures of protein/DNA interactions},
+  author={Martins, Andr{\'e} L and Walavalkar, Ninad M and Anderson, Warren D and Zang, Chongzhi and Guertin, Michael J},
+  journal={Nucleic acids research},
+  volume={46},
+  number={2},
+  pages={e9--e9},
+  year={2018},
+  publisher={Oxford University Press}
+}
+
+@article{li2009sequence,
+  title={The sequence alignment/map format and SAMtools},
+  author={Li, Heng and Handsaker, Bob and Wysoker, Alec and Fennell, Tim and Ruan, Jue and Homer, Nils and Marth, Gabor and Abecasis, Goncalo and Durbin, Richard},
+  journal={Bioinformatics},
+  volume={25},
+  number={16},
+  pages={2078--2079},
+  year={2009},
+  publisher={Oxford University Press}
+}
+
+@article{magovc2011flash,
+  title={FLASH: fast length adjustment of short reads to improve genome assemblies},
+  author={Mago{\v{c}}, Tanja and Salzberg, Steven L},
+  journal={Bioinformatics},
+  volume={27},
+  number={21},
+  pages={2957--2963},
+  year={2011},
+  publisher={Oxford University Press}
+}
+
+@article{edwards2019fastq,
+  title={Fastq-pair: efficient synchronization of paired-end fastq files},
+  author={Edwards, John A and Edwards, Robert A},
+  journal={bioRxiv},
+  pages={552885},
+  year={2019},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{martin2011cutadapt,
+  title={Cutadapt removes adapter sequences from high-throughput sequencing reads},
+  author={Martin, Marcel},
+  journal={EMBnet. journal},
+  volume={17},
+  number={1},
+  pages={10--12},
+  year={2011}
+}
+
 @article{smith2021peppro,
   title={PEPPRO: quality control and processing of nascent RNA profiling data},
   author={Smith, Jason P and Dutta, Arun B and Sathyan, Kizhakke Mattada and Guertin, Michael J and Sheffield, Nathan C},
