--- a/nascent_rna_methods.bib
+++ b/nascent_rna_methods.bib
@@ -1,3 +1,110 @@
+@article{rougvie1988rna,
+  title={The RNA polymerase II molecule at the 5′ end of the uninduced hsp70 gene of D. melanogaster is transcriptionally engaged},
+  author={Rougvie, Ann E and Lis, John T},
+  journal={Cell},
+  volume={54},
+  number={6},
+  pages={795--804},
+  year={1988},
+  publisher={Elsevier}
+}
+
+@article{core2012defining,
+  title={Defining the status of RNA polymerase at promoters},
+  author={Core, Leighton J and Waterfall, Joshua J and Gilchrist, Daniel A and Fargo, David C and Kwak, Hojoong and Adelman, Karen and Lis, John T},
+  journal={Cell reports},
+  volume={2},
+  number={4},
+  pages={1025--1035},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{zhao2021deconvolution,
+  title={Deconvolution of Expression for Nascent RNA Sequencing Data (DENR) Highlights Pre-RNA Isoform Diversity in Human Cells},
+  author={Zhao, Yixin and Dukler, Noah Ethan and Barshad, Gilad and Toneyan, Shushan and Danko, Charles G and Siepel, Adam},
+  journal={bioRxiv},
+  year={2021},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{anderson2020defining,
+  title={Defining data-driven primary transcript annotations with primaryTranscriptAnnotation in R},
+  author={Anderson, Warren D and Duarte, Fabiana M and Civelek, Mete and Guertin, Michael J},
+  journal={Bioinformatics},
+  volume={36},
+  number={9},
+  pages={2926--2928},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
+@article{yates2020ensembl,
+  title={Ensembl 2020},
+  author={Yates, Andrew D and Achuthan, Premanand and Akanni, Wasiu and Allen, James and Allen, Jamie and Alvarez-Jarreta, Jorge and Amode, M Ridwan and Armean, Irina M and Azov, Andrey G and Bennett, Ruth and others},
+  journal={Nucleic acids research},
+  volume={48},
+  number={D1},
+  pages={D682--D688},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
+@article{karolchik2003ucsc,
+  title={The UCSC genome browser database},
+  author={Karolchik, Donna and Baertsch, Robert and Diekhans, Mark and Furey, Terrence S and Hinrichs, Angie and Lu, YT and Roskin, Krishna M and Schwartz, Matt and Sugnet, Charles W and Thomas, Daryl J and others},
+  journal={Nucleic acids research},
+  volume={31},
+  number={1},
+  pages={51--54},
+  year={2003},
+  publisher={Oxford University Press}
+}
+
+@article{stolarczyk2020refgenie,
+  title={Refgenie: a reference genome resource manager},
+  author={Stolarczyk, Micha{\l} and Reuter, Vincent P and Smith, Jason P and Magee, Neal E and Sheffield, Nathan C},
+  journal={GigaScience},
+  volume={9},
+  number={2},
+  pages={giz149},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
+@article{core2014analysis,
+  title={Analysis of nascent RNA identifies a unified architecture of initiation regions at mammalian promoters and enhancers},
+  author={Core, Leighton J and Martins, Andr{\'e} L and Danko, Charles G and Waters, Colin T and Siepel, Adam and Lis, John T},
+  journal={Nature genetics},
+  volume={46},
+  number={12},
+  pages={1311--1320},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+
+@article{duarte2016transcription,
+  title={Transcription factors GAF and HSF act at distinct regulatory steps to modulate stress-induced gene activation},
+  author={Duarte, Fabiana M and Fuda, Nicholas J and Mahat, Dig B and Core, Leighton J and Guertin, Michael J and Lis, John T},
+  journal={Genes \& development},
+  volume={30},
+  number={15},
+  pages={1731--1746},
+  year={2016},
+  publisher={Cold Spring Harbor Lab}
+}
+
+@article{booth2016divergence,
+  title={Divergence of a conserved elongation factor and transcription regulation in budding and fission yeast},
+  author={Booth, Gregory T and Wang, Isabel X and Cheung, Vivian G and Lis, John T},
+  journal={Genome research},
+  volume={26},
+  number={6},
+  pages={799--811},
+  year={2016},
+  publisher={Cold Spring Harbor Lab}
+}
+
 @article{love2014moderated,
   title={Moderated estimation of fold change and dispersion for RNA-seq data with DESeq2},
   author={Love, Michael I and Huber, Wolfgang and Anders, Simon},
