--- a/nascent_rna_methods.bib
+++ b/nascent_rna_methods.bib
@@ -74,7 +74,7 @@
 
 @article{core2014analysis,
   title={Analysis of nascent RNA identifies a unified architecture of initiation regions at mammalian promoters and enhancers},
-  author={Core, Leighton J and Martins, Andr{\'e} L and Danko, Charles G and Waters, Colin T and Siepel, Adam and Lis, John T},
+  author={Core, Leighton J and Martins, André L and Danko, Charles G and Waters, Colin T and Siepel, Adam and Lis, John T},
   journal={Nature genetics},
   volume={46},
   number={12},
@@ -124,7 +124,7 @@
 }
 @misc{martins2018fqdedup,
   title={fqdedup: Remove PCR duplicates from FASTQ files},
-  author={Martins, Andr{\'e} L and Guertin, Michael J},
+  author={Martins, André L and Guertin, Michael J},
   year={2018},
   publisher={Github}
 }
@@ -138,7 +138,7 @@
 
 @article{martins2018universal,
   title={Universal correction of enzymatic sequence bias reveals molecular signatures of protein/DNA interactions},
-  author={Martins, Andr{\'e} L and Walavalkar, Ninad M and Anderson, Warren D and Zang, Chongzhi and Guertin, Michael J},
+  author={Martins, André L and Walavalkar, Ninad M and Anderson, Warren D and Zang, Chongzhi and Guertin, Michael J},
   journal={Nucleic acids research},
   volume={46},
   number={2},
@@ -243,7 +243,7 @@
 
 @article{danko2013signaling,
   title={Signaling pathways differentially affect RNA polymerase II initiation, pausing, and elongation rate in cells},
-  author={Danko, Charles G and Hah, Nasun and Luo, Xin and Martins, Andr{\'e} L and Core, Leighton and Lis, John T and Siepel, Adam and Kraus, W Lee},
+  author={Danko, Charles G and Hah, Nasun and Luo, Xin and Martins, André L and Core, Leighton and Lis, John T and Siepel, Adam and Kraus, W Lee},
   journal={Molecular cell},
   volume={50},
   number={2},
@@ -287,7 +287,7 @@
 
 @article{martins2018universal,
   title={Universal correction of enzymatic sequence bias reveals molecular signatures of protein/DNA interactions},
-  author={Martins, Andr{\'e} L and Walavalkar, Ninad M and Anderson, Warren D and Zang, Chongzhi and Guertin, Michael J},
+  author={Martins, André L and Walavalkar, Ninad M and Anderson, Warren D and Zang, Chongzhi and Guertin, Michael J},
   journal={Nucleic acids research},
   volume={46},
   number={2},
