--- a/nascent_rna_methods.bib
+++ b/nascent_rna_methods.bib
@@ -1,5 +1,5 @@
 @article{rougvie1988rna,
-  title={The RNA polymerase II molecule at the 5′ end of the uninduced hsp70 gene of D. melanogaster is transcriptionally engaged},
+  title={The RNA polymerase II molecule at the 5´ end of the uninduced hsp70 gene of D. melanogaster is transcriptionally engaged},
   author={Rougvie, Ann E and Lis, John T},
   journal={Cell},
   volume={54},
