--- a/nascent_rna_methods.bib
+++ b/nascent_rna_methods.bib
@@ -1,3 +1,11 @@
+@misc {fastqc,
+	title = {FastQC},
+	month = {Jun},
+	url = {https://qubeshub.org/resources/fastqc},
+	year = {2015},
+	author = {}
+}
+
 @article{rougvie1988rna,
   title={The RNA polymerase II molecule at the 5´ end of the uninduced hsp70 gene of D. melanogaster is transcriptionally engaged},
   author={Rougvie, Ann E and Lis, John T},
