--- a/nascent_rna_methods.bib
+++ b/nascent_rna_methods.bib
@@ -1,9 +1,7 @@
-@misc {fastqc,
-	title = {FastQC},
-	month = {Jun},
-	url = {https://qubeshub.org/resources/fastqc},
-	year = {2015},
-	author = {}
+@misc{andrews2017fastqc,
+  title={FastQC: a quality control tool for high throughput sequence data. 2010},
+  author={Andrews, Simon and others},
+  year={2017}
 }
 
 @article{rougvie1988rna,
