--- a/nascent_rna_methods.bib
+++ b/nascent_rna_methods.bib
@@ -1,3 +1,14 @@
+@article{altschul1997gapped,
+  title={Gapped BLAST and PSI-BLAST: a new generation of protein database search programs},
+  author={Altschul, Stephen F and Madden, Thomas L and Sch{\"a}ffer, Alejandro A and Zhang, Jinghui and Zhang, Zheng and Miller, Webb and Lipman, David J},
+  journal={Nucleic acids research},
+  volume={25},
+  number={17},
+  pages={3389--3402},
+  year={1997},
+  publisher={Oxford University Press}
+}
+
 @misc{andrews2017fastqc,
   title={FastQC: a quality control tool for high throughput sequence data. 2010},
   author={Andrews, Simon and others},
